--- a/SC/alogin.html
+++ b/SC/alogin.html
@@ -27,7 +27,7 @@
 			<form>
 				<div class="col-sm-5">
 				</div>
-				<div class="col-xs-2">
+				<div class="col-md-2">
 					<div class="row">
 						<div class="row">
 							<h4 class="pull-left">Login</h4>
