--- a/SC/alogin.html
+++ b/SC/alogin.html
@@ -21,13 +21,13 @@
 	  <body>
 	  	
 	    <div class="row header">
-	    	<img src="img/header.png"></img>
+	    	<img class="img-responsive" alt="logo" src="img/header.png"></img>
 		</div>
 	    <div class="row">
 			<form>
 				<div class="col-sm-5">
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-1">
 					<div class="row">
 						<div class="row">
 							<h4 class="pull-left">Login</h4>
