--- a/SC/alogin.html
+++ b/SC/alogin.html
@@ -25,9 +25,7 @@
 		</div>
 	    <div class="row">
 			<form>
-				<div class="col-sm-5">
-				</div>
-				<div class="col-sm-2">
+				<div class="col-sm-1 center-block">
 					<div class="row">
 						<div class="row">
 							<h4 class="pull-left">Login</h4>
