--- a/SC/alogin.html
+++ b/SC/alogin.html
@@ -19,14 +19,13 @@
   </head>
   <div class="container">
 	  <body>
-	  	
-	    <div class="row header">
-	    	<img class="img-responsive center-block" alt="logo" src="img/header.png"></img>
+	    <div class="row">
+	    	<img class="img-responsive center-block" src="img/header.png"></img>
 		</div>
 	    <div class="row">
 			<form>
-				<div class="col-sm-1 center-block">
-					<div class="row">
+				<div class="center-block">
+					<div class="row login-box center-block">
 						<div class="row">
 							<h4 class="pull-left">Login</h4>
 						</div>
@@ -57,8 +56,7 @@
 							<a class="btn btn-default btn-block pull-right" onclick="form.submit();">Create an Account <i class="fa fa-magic"></i></a>
 						</div>	
 					</div>
-				</div>
-				<div class="col-sm-5"></div>		
+				</div>	
 				</form>	
 		</div>
 		<br>
@@ -83,6 +81,10 @@
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	    <!-- Include all compiled plugins (below), or include individual files as needed -->
 	    <script src="js/bootstrap.min.js"></script>
+	  </body>
+	</div>
+</html>
+
 	    
 	  </body>
 	</div>
